修复重复载入头部，xss关闭无效

--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -58,6 +58,27 @@
         <a href="{:aaphp\Url::build('example/ModelController/select')}" target="_blank">查询</a>
     </li>
     <li>
+        <a href="{:aaphp\Url::build('example/ModelController/selectOne')}" target="_blank">查询一条数据</a>
+    </li>
+    <li>
+        <a href="{:aaphp\Url::build('example/ModelController/delete')}" target="_blank">删除</a>
+    </li>
+    <li>
+        <a href="{:aaphp\Url::build('example/ModelController/limit')}" target="_blank">查询结果条数限制</a>
+    </li>
+    <li>
+        <a href="{:aaphp\Url::build('example/ModelController/field')}" target="_blank">查询字段</a>
+    </li>
+    <li>
+        <a href="{:aaphp\Url::build('example/ModelController/where')}" target="_blank">条件查询</a>
+    </li>
+    <li>
+        <a href="{:aaphp\Url::build('example/ModelController/order')}" target="_blank">排序</a>
+    </li>
+    <li>
+        <a href="{:aaphp\Url::build('example/ModelController/group')}" target="_blank">分组</a>
+    </li>
+    <li>
         <a href="{:aaphp\Url::build('example/ModelController/count')}" target="_blank">统计条数</a>
     </li>
     <li>
@@ -80,6 +101,15 @@
     </li>
     <li>
         <a href="{:aaphp\Url::build('example/ModelController/decrease')}" target="_blank">字段数字减少</a>
+    </li>
+    <li>
+        <a href="{:aaphp\Url::build('example/ModelController/chain')}" target="_blank">链式操作</a>
+    </li>
+    <li>
+        <a href="{:aaphp\Url::build('example/ModelController/page')}" target="_blank">分页</a>
+    </li>
+    <li>
+        <a href="{:aaphp\Url::build('example/ModelController/getSql')}" target="_blank">获取执行过的sql语句</a>
     </li>
 </ul>
 
